# GTD-TODOs

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
app/: __init__.py  auth.py  config.py  csrf.py  db.py  logging_config.py  main.py  markdown.py  models.py  schemas.py  seed.py
app/routes/: __init__.py  auth.py  export.py  health.py  helpers.py  pages.py  settings.py  tasks.py
app/services/: __init__.py  api_key_service.py  auth_service.py  export_service.py  health_service.py  project_service.py  task_service.py
app/static/: app.css  auth.js
app/templates/: _task_inline_selectors.html  auth_login.html  auth_setup.html  base.html  error.html  inbox.html  index.html  project_detail.html  project_edit.html  projects_list.html  settings.html  task_edit.html  tasks_list.html  today.html
cli/: README.md  pyproject.toml
cli/tests/: conftest.py  (+9 more)
docs/: api.md  llm-integration.md
scripts/: bootstrap.sh  install-cli.sh
tests/: conftest.py  test_all_tasks.py  test_api_key_auth.py  test_api_key_service.py  test_app_boot.py  test_auth_integration.py  test_auth_login.py  test_auth_middleware.py  test_auth_model.py  test_auth_registration.py  test_auth_ui.py  test_gtd_workflows.py  test_hardening.py  test_health.py  test_pages.py  test_project_notes_due_date.py  test_project_service.py  test_quick_update.py  test_save_and_close.py  test_search_service.py  test_security_hardening.py  test_settings_page.py  test_task_service.py  test_today_and_projects.py
(+17 files in other folders)
